--- a/Dairy_Care_System/templates/productslist.html
+++ b/Dairy_Care_System/templates/productslist.html
@@ -352,7 +352,7 @@
             <li><b><a href="{% url 'editproduct' %}"><i class="fas fa-shopping-basket"></i> All Products List</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="{% url 'productstock' %}"><i class="fas fa-boxes"></i> Stock List</a></b></li>
+            <li><b><a href="{% url 'productstock' %}"><i class="fas fa-boxes"></i> Stock Details</a></b></li>
         </div>
         <div class="nav-item">
             <li>
