--- a/Dairy_Care_System/templates/adminpage.html
+++ b/Dairy_Care_System/templates/adminpage.html
@@ -12,6 +12,24 @@
             margin-left: 250px; /* Adjusting body margin to make space for the fixed sidebar */
         }
 
+        /* Notification badge styles */
+        .notification-badge {
+            position: relative;
+            display: inline-block;
+            margin-left: 5px;
+        }
+
+        .badge {
+            position: absolute;
+            top: -5px;
+            left: 10px;
+            background-color: red;
+            color: white;
+            border-radius: 50%;
+            padding: 2px 5px;
+            font-size: 15px;
+        }
+
     </style>
     <!-- Add SweetAlert2 CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
@@ -25,11 +43,11 @@
         <a href="#">Dairy Care System</a><br><br>
         <a href="{% url 'reguserlist' 'all' %}"><i class="fas fa-users"></i>  Users List</a><br>
         <a href="{% url 'productslist' %}"><i class="fas fa-shopping-basket"></i>  Products List</a><br>
-        
         <a href="{% url 'animalslist' %}"><i class="fas fa-paw"></i>  Animals List</a><br>
-        <a href="#"><i class="fas fa-glass-whiskey"></i>  Milk Details</a><br>
-        <a href="#"><i class="fas fa-tools"></i>  Equipment Details</a><br>
-        <a href="stocknotification"><i class="fas fa-bell"></i>  Notifications</a><br>
+        <a href="{% url 'milkdetails' %}"><i class="fas fa-glass-whiskey"></i>  Milk Details</a><br>
+        <a href="{% url 'stocknotification' %}"><i class="fas fa-bell"></i> Notifications
+            <!--  class="notification-badge" <span class="badge" id="notification-count">{{ unread_count }}</span>  -->
+        </a><br>
         <a href="{% url 'feedbackreview' %}"><i class="fas fa-comments"></i>  Feedback Review</a><br>
     </div>
 
@@ -104,6 +122,7 @@
                 }
             });
         }
+
     </script>
 
 </body>
