--- a/Dairy_Care_System/templates/viewcart.html
+++ b/Dairy_Care_System/templates/viewcart.html
@@ -292,30 +292,31 @@
     <!-- Navigation Bar-->
     <ul>
         <div class="header">
-            <!-- Hamburger Icon -->
-            <!-- <span class="hamburger" onclick="toggleNav()">&#9776;</span> -->
             <div class="nav-item">
                 <li><b><a href="{% url 'custproductslist' %}"><i class="fas fa-shopping-basket"></i> Products List</a></b></li>
             </div>
             <div class="nav-item">
-                <li><b><a href="{% url 'wishlist' %}"><i class="fas fa-heart"></i> Your Wishlist</a></b></li>
-            </div>  
-            <div class="nav-item">
-                <li><b><a href="{% url 'viewcart' %}"><i class="fas fa-shopping-cart"></i> Your Cart</a></b></li>
+                <li><b><a href="{% url 'wishlist' %}"><i class="fas fa-heart"></i> Wishlist</a></b></li>
             </div>
             <div class="nav-item">
-                <li><b><a href="{% url 'orderhistory' %}"><i class="fas fa-shopping-bag"></i> Your Orders</a></b></li>
+                <li><b><a href="{% url 'viewcart' %}"><i class="fas fa-shopping-cart"></i> Cart</a></b></li>
             </div>
             <div class="nav-item">
-                <li><b><a href="{% url 'feedbackpage' %}"><i class="fas fa-comments"></i> Your Feedback</a></b></li>
+                <li><b><a href="{% url 'orderhistory' %}"><i class="fas fa-shopping-bag"></i> Orders</a></b></li>
+            </div>
+            <div class="nav-item">
+                <li><b><a href="{% url 'preorderlisting' %}"><i class="fas fa-clipboard-list"></i> Pre-Orders</a></b></li>
+            </div>
+            <div class="nav-item">
+                <li><b><a href="{% url 'feedbackpage' %}"><i class="fas fa-comments"></i> Feedback</a></b></li>
             </div>
             <div class="nav-item">
                 <li>
                     <b><a href="#" class="username" onclick="toggleDropdown()"><i class="fas fa-user-circle"></i> {{ username }}</a></b>
                     <div class="dropdown-content" id="dropdown-content">
-                        <a href="{% url 'userprofile' %}"><i class="fas fa-user"></i>Profile</a>
+                        <a href="{% url 'userprofile' %}"><i class="fas fa-user"></i> Profile</a>
                         <a href="{% url 'customerpage' %}"><i class="fas fa-home"></i> Dashboard</a>
-                        <a href="#" onclick="confirmLogout()"><i class="fas fa-sign-out-alt"></i>Logout</a>
+                        <a href="#" onclick="confirmLogout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
                     </div>
                 </li>
             </div>
@@ -349,7 +350,7 @@
                         <div class="product-name">
                              <!-- Display the product image if available -->
                             <img src="{{ item.product.images.first.image.url }}">
-                            <!-- <a href="{% url 'productdetails' %}?product_id={{ item.product.product_id }}" style="text-decoration: underline; color: #000000;"> -->
+                            <a href="{% url 'custproductslist' %}" style="text-decoration: underline; color: #000000;">
                                 {{ item.product.product_name }}</a>
                         </div>
                     </strong></td>
@@ -379,7 +380,7 @@
 
         <div class="checkout">
             <a href="{% url 'custproductslist' %}" class="btn btn-shop"><i class="fas fa-shopping-basket"></i> Continue Shopping</a>
-            <a href="{% url 'checkout' %}" class="btn btn-checkout"><i class="fas fa-check-circle"></i> Proceed to Checkout</a>
+            <a href="{% url 'checkoutbilling' %}" class="btn btn-checkout"><i class="fas fa-check-circle"></i> Proceed to Checkout</a>
         </div>
 
 
