--- a/Dairy_Care_System/templates/wishlist.html
+++ b/Dairy_Care_System/templates/wishlist.html
@@ -177,30 +177,31 @@
     <!-- Navigation Bar-->
     <ul>
         <div class="header">
-            <!-- Hamburger Icon -->
-            <!-- <span class="hamburger" onclick="toggleNav()">&#9776;</span> -->
             <div class="nav-item">
                 <li><b><a href="{% url 'custproductslist' %}"><i class="fas fa-shopping-basket"></i> Products List</a></b></li>
             </div>
             <div class="nav-item">
-                <li><b><a href="{% url 'wishlist' %}"><i class="fas fa-heart"></i> Your Wishlist</a></b></li>
-            </div>  
-            <div class="nav-item">
-                <li><b><a href="{% url 'viewcart' %}"><i class="fas fa-shopping-cart"></i> Your Cart</a></b></li>
+                <li><b><a href="{% url 'wishlist' %}"><i class="fas fa-heart"></i> Wishlist</a></b></li>
             </div>
             <div class="nav-item">
-                <li><b><a href="{% url 'orderhistory' %}"><i class="fas fa-shopping-bag"></i> Your Orders</a></b></li>
+                <li><b><a href="{% url 'viewcart' %}"><i class="fas fa-shopping-cart"></i> Cart</a></b></li>
             </div>
             <div class="nav-item">
-                <li><b><a href="{% url 'feedbackpage' %}"><i class="fas fa-comments"></i> Your Feedback</a></b></li>
+                <li><b><a href="{% url 'orderhistory' %}"><i class="fas fa-shopping-bag"></i> Orders</a></b></li>
+            </div>
+            <div class="nav-item">
+                <li><b><a href="{% url 'preorderlisting' %}"><i class="fas fa-clipboard-list"></i> Pre-Orders</a></b></li>
+            </div>
+            <div class="nav-item">
+                <li><b><a href="{% url 'feedbackpage' %}"><i class="fas fa-comments"></i> Feedback</a></b></li>
             </div>
             <div class="nav-item">
                 <li>
                     <b><a href="#" class="username" onclick="toggleDropdown()"><i class="fas fa-user-circle"></i> {{ username }}</a></b>
                     <div class="dropdown-content" id="dropdown-content">
-                        <a href="{% url 'userprofile' %}"><i class="fas fa-user"></i>Profile</a>
+                        <a href="{% url 'userprofile' %}"><i class="fas fa-user"></i> Profile</a>
                         <a href="{% url 'customerpage' %}"><i class="fas fa-home"></i> Dashboard</a>
-                        <a href="#" onclick="confirmLogout()"><i class="fas fa-sign-out-alt"></i>Logout</a>
+                        <a href="#" onclick="confirmLogout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
                     </div>
                 </li>
             </div>
@@ -224,8 +225,8 @@
             <div class="wishlist-item-content">
                 <div class="wishlist-item-details">
                     {% if item.product.product_id %}
-                    <!-- <a href="{% url 'productdetails' %}?product_id={{ item.product.product_id }}" style="text-decoration: underline; color: #000000;"> -->
-                        <h2>{{ item.product.product_name }}</h2>
+                        <a href="{% url 'custproductslist' %}" style="text-decoration: underline; color: #000000;">
+                            <h2>{{ item.product.product_name }}</h2>
                         </a>
                     {% else %}
                         <h2>{{ item.product.product_name }}</h2>
@@ -240,23 +241,12 @@
                     <button type="submit" class="remove-button"><i class="fas fa-trash"></i>Remove</button>
                 </form>
             </div>
-        </div>
+        </div><br><br>
         {% empty %}
-        <p>Your wishlist is empty.</p>
+        <p style="font-size: 30px; color:white">Your wishlist is currently empty.</p><br>
+        <a href="{% url 'custproductslist' %}" style="font-size: 25px; color:rgb(255, 0, 0)">Continue Shopping</a></strong>
         {% endfor %}
     </center>
-
-
-    
-
-
-
-
-
-
-
-
-
 
     <!-- Add SweetAlert2 JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
