--- a/Dairy_Care_System/templates/login.html
+++ b/Dairy_Care_System/templates/login.html
@@ -42,6 +42,12 @@
         .toggle-password:hover {
             color: #333;
         }
+
+        footer {
+            text-align: center;
+            margin-top: 10px;
+            color: #000000;
+        }
     </style>
 </head>
 <body>
@@ -90,8 +96,16 @@
                     <!-- <span>sign in with Google</span> -->
                 </div>
             </form>
+            <!-- <br><br><br><p>&copy; 2024 Dairy Care System. All rights reserved.</p> -->
         </div>
     </div>
+    
+    
+
+    <!-- <footer>
+        <p>&copy; 2024 Dairy Care System. All rights reserved.</p>
+    </footer> -->
+    
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             function validateLoginForm() {
