--- a/Dairy_Care_System/templates/orderhistory.html
+++ b/Dairy_Care_System/templates/orderhistory.html
@@ -91,12 +91,36 @@
             display: block;
         }
 
-        h1 {
+        /* h1 {
             text-align: center;
             margin-top: 20px;
             color: #07509f;
             font-size: 50px;
             font-family: Copperplate, Papyrus, fantasy;
+        } */
+
+        h1 {
+            text-align: center;
+            color: #07509f;
+            margin-top: 20px;
+            font-family: Copperplate, Papyrus, fantasy;
+            font-size: 45px;
+            font-weight: bold;
+            text-shadow: 2px 2px 4px rgba(14, 4, 153, 0.5);
+            letter-spacing: 2px;
+            position: relative;
+            display: inline-block;
+        }
+
+        h1:after {
+            content: '';
+            display: block;
+            width: 90%;
+            height: 3px;
+            background: linear-gradient(90deg, transparent, #000000, transparent);
+            position: absolute;
+            bottom: -2px;
+            left: 10%;
         }
 
         .container {
@@ -288,7 +312,7 @@
         </div>
     </ul><br><br>
 
-    <h1>Your Orders</h1>
+    <center><h1>Your Orders</h1></center>
     <div class="container"><br>
         <!-- Order Cards -->
         {% for order in orders %}
@@ -311,9 +335,6 @@
         {% endfor %}
         
         <br><br>
-        <div class="footer"><strong>
-            Thank you for shopping with us!
-        </strong></div><br><br>
         <center>
         <!-- Display success message if it exists -->
         {% if messages %}
@@ -323,8 +344,11 @@
             {% endfor %}
         </div>
         {% endif %}
-        </center>
+        </center><br>
     </div>
+    <div class="footer"><strong>
+        Thank you for shopping with us!
+    </strong></div><br><br><br><br>
 
     <!-- Modal for Order Cancellation -->
     <div id="cancelModal" class="modal">
