--- a/Dairy_Care_System/templates/viewcart.html
+++ b/Dairy_Care_System/templates/viewcart.html
@@ -94,13 +94,37 @@
             display: block;
         }
 
-        h2 {
+        /* h2 {
             text-align: center;
             font-family: Copperplate, Papyrus, fantasy;
-            font-size: 30px;
+            font-size: 35px;
             padding: 20px;
             font-weight: 600;
             color: #0f4f94;
+        } */
+
+        h2 {
+            text-align: center;
+            color: #0f4f94;
+            font-family: Copperplate, Papyrus, fantasy;
+            font-size: 35px;
+            font-weight: bold;
+            padding: 20px;
+            text-shadow: 2px 2px 4px rgba(14, 4, 153, 0.5);
+            letter-spacing: 2px;
+            position: relative;
+            display: inline-block;
+        }
+
+        h2:after {
+            content: '';
+            display: block;
+            width: 90%;
+            height: 3px;
+            background: linear-gradient(90deg, transparent, #000000, transparent);
+            position: absolute;
+            bottom: -2px;
+            left: 10%;
         }
 
         .cart-container {
@@ -326,13 +350,13 @@
 <div class="main-content">
 
     <div class="cart-container">
-        <h2>Your Shopping Cart</h2>
+        <center><h2>Your Shopping Cart</h2></center>
 
         {% if cart_items %}
         <table>
             <thead>
                 <tr>
-                    <th>Select</th> <!-- Add a new header for checkboxes -->
+                    <!-- <th>Select</th>  -->
                     <th>Product</th>
                     <th>Quantity</th>
                     <th>Price</th>
@@ -343,9 +367,9 @@
             <tbody>
                 {% for item in cart_items %}
                 <tr>
-                    <td data-label="Select">
+                    <!-- <td data-label="Select">
                         <input type="checkbox" name="selected_products" value="{{ item.cart_id }}">
-                    </td>
+                    </td> -->
                     <td data-label="Product"><strong>
                         <div class="product-name">
                              <!-- Display the product image if available -->
