--- a/Dairy_Care_System/templates/wishlist.html
+++ b/Dairy_Care_System/templates/wishlist.html
@@ -90,6 +90,15 @@
             display: block;
         }
 
+        /* h1 {
+            color: #ffffff;
+            font-family: Copperplate, Papyrus, fantasy;
+            font-size: 50px;
+            font-weight: bold;
+            margin-top: 40px;
+            margin-bottom: 30px;
+        } */
+
         h1 {
             color: #ffffff;
             font-family: Copperplate, Papyrus, fantasy;
@@ -97,6 +106,21 @@
             font-weight: bold;
             margin-top: 40px;
             margin-bottom: 30px;
+            text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.5);
+            letter-spacing: 2px;
+            position: relative;
+            display: inline-block;
+        }
+
+        h1:after {
+            content: '';
+            display: block;
+            width: 90%;
+            height: 3px;
+            background: linear-gradient(90deg, transparent, #ffffff, transparent);
+            position: absolute;
+            bottom: -10px;
+            left: 10%;
         }
 
         .wishlist-item {
@@ -210,7 +234,7 @@
 
     <!-- Main content that shifts when the sidebar opens -->
     <div class="main-content">
-    <center><h1><strong>Your Wishlist</strong></h1>
+    <center><h1><strong>Your Wishlist</strong></h1><br><br>
 
         {% for item in wishlist %}
         <div class="wishlist-item">
