--- a/Dairy_Care_System/templates/customerpage.html
+++ b/Dairy_Care_System/templates/customerpage.html
@@ -27,7 +27,7 @@
     <!-- Side Navigation (Always Visible) -->
     <div id="mySidenav" class="sidenav">
         <a href="#"></i> Dairy Care System</a><br><br><br>
-        <a href="{% url 'custproductslist' %}"><i class="fas fa-shopping-basket"></i> Products List</a><br>
+        <a href="{% url 'custproductslist' %}" id="products"><i class="fas fa-shopping-basket"></i> Products List</a><br>
         <a href="{% url 'wishlist' %}"><i class="fas fa-heart"></i> Your Wishlist</a><br>
         <a href="{% url 'viewcart' %}"><i class="fas fa-shopping-cart"></i> Your Cart</a><br>
         <a href="{% url 'orderhistory' %}"><i class="fas fa-shopping-bag"></i> Your Orders</a><br>
