--- a/Dairy_Care_System/templates/productdetails.html
+++ b/Dairy_Care_System/templates/productdetails.html
@@ -253,7 +253,7 @@
                             {% csrf_token %}
                             <input type="hidden" name="product_id" value="{{ product.product_id }}">
                             <input type="hidden" name="quantity" id="cart-quantity" value="1">
-                            <button class="btn buy-button" type="submit">Add to Cart</button>
+                            <button class="btn buy-button" type="submit" id="add-to-cart">Add to Cart</button>
                         </form>
                     </div>
 
