--- a/Dairy_Care_System/templates/addproducts.html
+++ b/Dairy_Care_System/templates/addproducts.html
@@ -65,7 +65,7 @@
     <!-- Image preview element -->
     <img id="imagePreview" class="image-preview" alt="Selected Image Preview"><br>
 
-    <button type="submit">Add Product</button><br><br>
+    <button type="submit" id="add_prod">Add Product</button><br><br>
 
     {% if messages %}
     <div class="error-messages">
