--- a/Dairy_Care_System/templates/contactus.html
+++ b/Dairy_Care_System/templates/contactus.html
@@ -57,8 +57,8 @@
         </p>
         <div class="contact-info">
             <div><i class="fas fa-user" style="margin-right: 10px; color: #0853a4;"></i> <strong>Name:</strong> Admin</div><br>
-            <div><i class="fas fa-envelope" style="margin-right: 10px; color: #0853a4;"></i> <strong>Email:</strong> Admin11@gmail.com</div><br>
-            <div><i class="fas fa-phone" style="margin-right: 10px; color: #0853a4;"></i> <strong>Phone Number:</strong> 6282752569</div><br>
+            <div><i class="fas fa-envelope" style="margin-right: 10px; color: #0853a4;"></i> <strong>Email:</strong> dairycaresystem25@gmail.com</div><br>
+            <div><i class="fas fa-phone" style="margin-right: 10px; color: #0853a4;"></i> <strong>Phone Number:</strong> 8547045699</div><br>
             <div>
              <!-- Google Map Embed -->
             <iframe 
