--- a/Dairy_Care_System/templates/customerpage.html
+++ b/Dairy_Care_System/templates/customerpage.html
@@ -32,7 +32,7 @@
         <a href="{% url 'viewcart' %}"><i class="fas fa-shopping-cart"></i> Your Cart</a><br>
         <a href="{% url 'orderhistory' %}"><i class="fas fa-shopping-bag"></i> Your Orders</a><br>
         <a href="{% url 'preorderlisting' %}"><i class="fas fa-clipboard-list"></i> Your Pre-Orders</a><br>
-        <a href="{% url 'feedbackpage' %}"><i class="fas fa-comments"></i> Your Feedback</a><br>
+        <a href="{% url 'feedbackpage' %}" id="feed"><i class="fas fa-comments"></i> Your Feedback</a><br>
     </div>
 
     <!-- Navigation Bar -->
