--- a/Dairy_Care_System/templates/feedbackpage.html
+++ b/Dairy_Care_System/templates/feedbackpage.html
@@ -93,7 +93,7 @@
                     <input type="radio" name="star" id="star5" value="5" required>
                     <label for="star5" title="5 stars">★</label>
                     <input type="radio" name="star" id="star4" value="4">
-                    <label for="star4" title="4 stars">★</label>
+                    <label for="star4" title="4 stars">★</label>   
                     <input type="radio" name="star" id="star3" value="3">
                     <label for="star3" title="3 stars">★</label>
                     <input type="radio" name="star" id="star2" value="2">
@@ -104,7 +104,7 @@
                 
             
                 <textarea id="feedback" name="feedback" placeholder="Enter your feedback here..." required></textarea>
-                <button type="submit">Submit</button>
+                <button type="submit" id="submit">Submit</button>
             </form>
         
         <div>
